# aoc-2023

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs
src/template/: mod.rs
