[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
enum-iterator = "1.4.1"
itertools = "0.12.0"
nohash-hasher = "0.2.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
num_enum = "0.7.1"
pcre2 = "0.2.6"
pico-args = "0.5.0"
regex = "1.10.2"
